<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dp">

    <androidx.appcompat.widget.AppCompatTextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/e_mail"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/eMail"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/e_mail"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/user_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userName"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/user_name"
        android:imeOptions="actionDone"
        android:paddingStart="10dp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry"
        android:inputType="text"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/first_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstName"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/first_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/last_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastName"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/last_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/age"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/age"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/age"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textStyle="bold"

        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClear"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:text="@string/clear"
        android:textColor="@color/white"
        tools:ignore="RtlSymmetry" />


</androidx.appcompat.widget.LinearLayoutCompat>

